@@ -13,6 +13,7 @@
 * Make card brand error more user friendly [oggy]
 * DataCash: Update test Mastercard number [jamesshipton]
 * DataCash: Update test response fixtures [jamesshipton]
+* Pin: Add Pin.js card token support [nagash]
 
 == Version 1.31.1 (February 25, 2013)
 
